third_party/move/move-compiler-v2/tests/more-v1/parser/friend_decl_missing_semicolon.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/friend_decl_missing_semicolon.move:6:1
  │
6 │ }
  │ ^
  │ │
  │ Unexpected '}'
  │ Expected ';'
